--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -11,6 +11,15 @@ $gray-medium-light: #eaeaea;
   box-sizing:         border-box;
 }
 
+
+$fa-font-path: '@fortawesome/fontawesome-free/webfonts';
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
+@import '@fortawesome/fontawesome-free/scss/solid';
+@import '@fortawesome/fontawesome-free/scss/regular';
+@import '@fortawesome/fontawesome-free/scss/brands';
+@import '@fortawesome/fontawesome-free/scss/v4-shims';
+
+
 /* universal */
 
 body {
@@ -298,3 +307,35 @@ span.image {
     width: 305px;
   }
 }
+
+
+
+.heart {
+  color: rgb(255, 74, 74);
+  font-size: 25px;
+  animation: anime 1s;
+}
+@keyframes anime{
+  15% { transform: scale(1.3); }
+  20% { transform: scale(1); }
+  }
+
+.heart-empty {
+  font-size: 25px;
+  -webkit-text-stroke: 5px white
+}
+.btn-like:hover > .heart-empty {
+  color: rgb(168, 168, 168);
+}
+.btn-like {
+  position: relative;
+  left: 60px;
+}
+.btn-like {
+  border: none;
+  background-color: rgb(255, 255, 255);
+  :hover {
+    background-color: rgb(255, 255, 255);
+  }
+}
+
