--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="footer">
   <small>
-    The <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    by <a href="https://www.michaelhartl.com/">Michael Hartl</a>
+    The animal app
+    by <a href="https://www.michaelhartl.com/">ryohoso</a>
   </small>
   <nav>
     <ul>
