--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,17 +18,16 @@
   </div>
 <% else %>
   <div class="center jumbotron">
-    <h1>Welcome to the Sample App</h1>
+    <h1>Welcome to the Animal Friends</h1>
 
     <h2>
       This is the home page for the
-      <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-      sample application.
+  
+      Animal application.
     </h2>
 
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
-  <%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),
-              "https://rubyonrails.org/" %>
+  <img src="https://lh3.googleusercontent.com/4RUw_2O1dcFFzcVbcqgoxVkV3zOX9nvpqjuogglKQd2kvghNE1Csu9e7bLVVXcbySsIGgA=s85">
 <% end %>
