--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -29,5 +29,5 @@
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
   </div>
 
-  <img src="https://lh3.googleusercontent.com/4RUw_2O1dcFFzcVbcqgoxVkV3zOX9nvpqjuogglKQd2kvghNE1Csu9e7bLVVXcbySsIGgA=s85">
+  <img src="https://ryo962583000.files.wordpress.com/2022/05/happythursday-th-1.png?resize=438,438" whide=50px height =50px>
 <% end %>
