--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,7 +19,6 @@
 <% else %>
   <div class="center jumbotron">
     <h1>Welcome to the Animal Friends</h1>
-
     <h2>
       This is the home page for the
   
@@ -27,7 +26,8 @@
     </h2>
 
     <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
+    <p  class="hitokoto">(お忙しいようでしたら、log in の方をお使いください)</p>
   </div>
 
-  <img src="https://ryo962583000.files.wordpress.com/2022/05/happythursday-th-1.png?resize=438,438" whide=50px height =50px>
+  <img src="https://ryo962583000.files.wordpress.com/2022/05/happythursday-th-1.png?resize=438,438"  whide=50px height =50px>
 <% end %>
