--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
+      <p> 返信用ID(<%= @user.unique_name %>)</p>
     </section>
     <section class="stats">
       <%= render 'shared/stats' %>
